src/app/contact/pages/contact-container.scss
.contact-container {    
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(384px, 1fr));
    grid-column-gap: 30px;
    
    > .box {
        background-color:#fff;
        box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
        padding: 40px 50px;

        &.-nopadding{
            padding: 0;
        }

        @include mq(small) {
            padding: 30px 20px;
        }
    }
}

